mudando a cor da lista e do paragrafo

--- a/Fundamentos/secao-2-introducao-a-html-e-css/dia-2-html-e-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/secao-2-introducao-a-html-e-css/dia-2-html-e-css-primeiros-passos-em-css/index.html
@@ -8,12 +8,15 @@
            font-size: 65px; 
            color: orange;
         }
+        .mdFundo{
+            background-color: blue;
+        }
     </style>
   </head>
   <body>
     <h1>Frutas</h1>
-    <p>Qual é a sua fruta favorita?</p>
-    <ul>
+    <p class="mdFundo">Qual é a sua fruta favorita?</p>
+    <ul class="mdFundo">
       <li>Maçã</li>
       <li>Banana</li>
       <li>Goiaba</li>
