--- a/Fundamentos/secao-4-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
+++ b/Fundamentos/secao-4-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/index.html
@@ -1,24 +1,104 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <main id="paiDoPai">
-  <section id="pai">
-    <section id="primeiroFilho"></section>
-    <section id="elementoOndeVoceEsta">
-      <section id="primeiroFilhoDoFilho"></section>
-      <section id="segundoEUltimoFilhoDoFilho"></section>
-    </section>
-    Atenção!
-    <section id="terceiroFilho"></section>
-    <section id="quartoEUltimoFilho"></section>
-  </section>
-</main>
-<script src="script.js"></script>
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Exercício</title>
+    <style>
+      section {
+        border-color: black;
+        border-style: solid;
+      }
+
+      .title {
+        text-align: center;
+      }
+
+      .main-content {
+        background-color: yellow;
+      }
+
+      .main-content .center-content {
+        background-color: red;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      .main-content .center-content p {
+        font-style: italic;
+      }
+
+      .main-content .left-content {
+        background-color: green;
+        width: 60%;
+        margin-left: 0;
+        margin-right: auto;
+      }
+
+      .main-content .left-content .small-image {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 100%;
+      }
+
+      .main-content .right-content {
+        background-color: blue;
+        width: 60%;
+        margin-left: auto;
+        margin-right: 0;
+      }
+
+      .main-content .description {
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <script>
+      const h1 = document.createElement("h1")
+      h1.innerHTML = "ola"
+      document.body.appendChild(h1)
+
+      const mainT = document.createElement("main")
+      mainT.className = "main-content"
+      document.body.appendChild(mainT)
+
+      const sect = document.createElement("section")
+      sect.className = "center-content"
+      mainT.appendChild(sect)
+
+      const pa = document.createElement("p")
+      sect.appendChild(pa)
+
+      const sect2 = document.createElement("section")
+      sect2.className = "left-content"
+      mainT.appendChild(sect2)
+
+      const sect3 = document.createElement("section")
+      sect3.className = "right-content"
+      mainT.appendChild(sect3)
+
+      const imagem = document.createElement("img")
+      imagem.src = "https://picsum.photos/200"
+      imagem.className = "small-image"
+      sect.appendChild(imagem)
+
+      const listaN = document.createElement("ul")
+      sect2.appendChild(listaN)
+      const lis = ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10']
+      for (let num in lis) {
+        const elementLi = document.createElement('li');
+        elementLi.innerHTML = lis[num];
+        listaN.appendChild(elementLi);
+      }
+
+      for(let index = 1; index <= 3; index +=1) {
+      const h3s = document.createElement("h3");
+      h3s.innerHTML = "show" + index
+      mainT.appendChild(h3s)
+      }
+    </script>
+  </body>
 </html>
