--- a/Fundamentos/secao-5-html-e-css-forms-flexbox-e-responsividade/dia-3-css-flexbox-parte-1-e-parte-2/index.html
+++ b/Fundamentos/secao-5-html-e-css-forms-flexbox-e-responsividade/dia-3-css-flexbox-parte-1-e-parte-2/index.html
@@ -1,70 +1,44 @@
 <!DOCTYPE html>
-<html lang="pt">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TRYFLIX</title>
-    <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
-    <header class="header-container">
-      <nav class="menu-container">
-        <ul>
-          <li>Cadastre-se</li>
-          <li>Conecte-se</li>
-          <li>Sobre</li>
-        </ul>
-      </nav>
-      <section class="logo-container">
-        <img
-          src="https://fontmeme.com/permalink/201215/2044acc483426f38dc2c79c3c84ab998.png"
-          alt="Website Logo"
-        />
-      </section>
-    </header>
-    <main class="main-container">
-        <section class="movie-container">
-          <section>
-            <h2>Assista hoje</h2>
-            <div class="card-container">
-              <div>FILMES 1</div>
-              <div>FILMES 2</div>
-              <div>FILMES 3</div>
-              <div>FILMES 4</div>
-              <div>FILMES 5</div>
-              <div>FILMES 6</div>
-              <div>FILMES 7</div>
-              <div>FILMES 8</div>
-              <div>FILMES 9</div>
-            </div>
-          </section>
-          <article>
-            <h2>Mais assitidos</h2>
-            <div class="card-container">
-              <div>FILMES 1</div>
-              <div>FILMES 2</div>
-              <div>FILMES 3</div>
-              <div>FILMES 4</div>
-              <div>FILMES 5</div>
-              <div>FILMES 6</div>
-              <div>FILMES 7</div>
-              <div>FILMES 8</div>
-              <div>FILMES 9</div>
-            </div>
-          </article>
-        </section>
-    <aside class="aside-container">
-      <h3>Últimas notícias</h3>
-  
-      <h4>Title</h4>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet officia in provident esse excepturi ipsam!</p>
-  
-      <h4>Title</h4>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet officia in provident esse excepturi ipsam!</p>
-  
-      <h4>Title</h4>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet officia in provident esse excepturi ipsam!</p>
-    </aside>
-  </main>
-  </body>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hotel trybe</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="header-trybe">
+    <h1>Trybe Hotel</h1>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3q0v72AJA-p9V_oPst_65uEG9dr1WxKN-ZYp_5gE&s" alt="logo-trybe">
+  </header>
+  <section class="hotel-form">
+    <label for="inputCheckin">Check-in</label>
+    <input class="inputCheckin" type="date">
+    <br>
+    <label for="inputCheckout">Check-out</label>
+    <input class="inputCheckout" type="date">
+  </section>
+  <section class="hotel-form">
+   <p>Acomodação</p>
+   <input class="bedroom" name="quarto" type="radio">quarto Comum
+   <input class="bedroom" name="quarto" type="radio">quarto Club
+   <input class="bedroom" name="quarto" type="radio"> quarto Luxo
+  </section>
+  <section class="hotel-form">
+    <label for="nPessoas">Número de pessoas</label>
+    <br>
+   <select class="nPessoas" name="">
+    <option class="nPessoas" value="">1 Pessoa</option>
+    <option class="nPessoas" value="">2 Pessoa</option>
+    <option class="nPessoas" value="">3 Pessoa</option>
+    <option class="nPessoas" value="">4 Pessoa</option>
+   </select>
+   </section>
+   <section class="hotel-form">
+    <p>Campo para Observações:</p>
+    <textarea class="obs" name=""  cols="30" rows="10" placeholder="Observações..."></textarea>
+   </section>
+   <button type="submit">Enviar</button>
+</body>
 </html>
